# bookstore

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py  wsgi.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: category_viewset.py
