[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Doug <doug.edgates@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.1"
black = "^24.4.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.2"
flake8 = "^7.1.0"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
gitpython = "^3.1.43"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
